--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.2.7
 django-appconf==1.0.4
 django-compressor==2.4.1
 gunicorn==20.1.0
+psycopg2==2.9.1
 python-dotenv==0.19.0
 pytz==2021.1
 rcssmin==1.0.6
