--- a/.github/workflows/collectstatic.yaml
+++ b/.github/workflows/collectstatic.yaml
@@ -28,3 +28,21 @@ jobs:
     - name: Build
       working-directory: ./frontend
       run: npm run production
+
+    strategy:
+      matrix:
+        python-version: [3.9]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Collectstatic for python
+      run: |
+        python manage.py collectstatic --noinput
