--- a/.github/workflows/collectstatic.yaml
+++ b/.github/workflows/collectstatic.yaml
@@ -1,4 +1,4 @@
-name: Collect Static for Django with Frontend.
+name: Django Collectstatic
 
 on:
   push:
@@ -7,32 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install dependencies
-      working-directory: ./frontend
-      run: npm install
-
-    - name: Build
-      working-directory: ./frontend
-      run: npm run production
-
     strategy:
       matrix:
         python-version: [3.9]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -43,6 +20,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Collectstatic for python
+    - name: Run Collectstatic
       run: |
-        python manage.py collectstatic --noinput
+        python manage.py collecstatic --noinput
