--- a/.github/workflows/collectstatic.yaml
+++ b/.github/workflows/collectstatic.yaml
@@ -21,5 +21,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Collectstatic
+      working-directory: ./web
       run: |
         python manage.py collecstatic --noinput
