--- a/.github/workflows/collectstatic.yaml
+++ b/.github/workflows/collectstatic.yaml
@@ -23,4 +23,4 @@ jobs:
     - name: Run Collectstatic
       working-directory: ./web
       run: |
-        python manage.py collecstatic --noinput
+        python manage.py collectstatic --noinput
