Updated: collectstatic.yaml

--- a/.github/workflows/collectstatic.yaml
+++ b/.github/workflows/collectstatic.yaml
@@ -23,4 +23,5 @@ jobs:
     - name: Run Collectstatic
       working-directory: ./web
       run: |
+        mkdir staticfiles
         python manage.py collectstatic --noinput
