--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ whitenoise = "^6.0.0"
 gunicorn = "^20.1.0"
 asyncio = "^3.4.3"
 uvicorn = "^0.17.6"
+django-cockroachdb = "3.2"
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 
