--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.5.0
 asyncio==3.4.3
 click==8.0.4
 colorama==0.4.4
+django-cockroachdb==3.2
 django==3.2.7
 gunicorn==20.1.0
 h11==0.13.0
+psycopg2-binary==2.9.3
 python-dotenv==0.20.0
 pytz==2022.1
 sqlparse==0.4.2
