--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "3.2.7"
-python-dotenv = "^0.20.0"
 whitenoise = "^6.0.0"
 gunicorn = "^20.1.0"
 asyncio = "^3.4.3"
 uvicorn = "^0.17.6"
 django-cockroachdb = "3.2"
 psycopg2-binary = "^2.9.3"
+python-decouple = "^3.8"
 
 [tool.poetry.dev-dependencies]
 
