--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
-asgiref==3.5.0
-asyncio==3.4.3
-click==8.0.4
-colorama==0.4.4
-django-cockroachdb==3.2
-django==3.2.7
-gunicorn==20.1.0
-h11==0.13.0
-psycopg2-binary==2.9.3
-python-dotenv==0.20.0
-pytz==2022.1
-sqlparse==0.4.2
-uvicorn==0.17.6
-whitenoise==6.0.0
+asgiref==3.7.2;
+asyncio==3.4.3;
+click==8.1.7;
+colorama==0.4.6;
+django-cockroachdb==3.2;
+django==3.2.7;
+gunicorn==20.1.0;
+h11==0.14.0;
+psycopg2-binary==2.9.8;
+python-decouple==3.8;
+pytz==2023.3.post1;
+setuptools==68.2.2;
+sqlparse==0.4.4;
+typing-extensions==4.8.0;
+uvicorn==0.17.6;
+whitenoise==6.5.0;
